# kinetofluo-napari

./: setup.cfg
src/kinetofluo_napari/: __init__.py  _widget.py  napari.yaml
